--- a/data_transformation.ipynb
+++ b/data_transformation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20719,6 +20719,15 @@
     "      dep_time, \n",
     "      sched_dep_time, \n",
     "      dep_delay)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "min_rank(select(flights, dep_delay))"
    ]
   },
   {
